# rules_systemrdl

./: .bazelrc  404.html  MODULE.bazel  README.md  WORKSPACE.bazel  index.html  print.html  rules.html  searchindex.js  searchindex.json  system_rdl_defs.html  system_rdl_info.html  system_rdl_library.html  system_rdl_output.html  system_rdl_toolchain.html  toc.html  toc.js  verilog_system_rdl_library.html  version.bzl  vhdl_system_rdl_library.html
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: ci.yml  compile-requirements-examples.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md  rules.md
examples/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/plugin/: BUILD.bazel  peakrdl.toml
examples/requirements/: requirements_linux_aarch64.txt  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
examples/toolchain/: BUILD.bazel  peakrdl.toml  peakrdl_dump.py
systemrdl/: BUILD.bazel  defs.bzl  system_rdl_info.bzl  system_rdl_library.bzl  system_rdl_output.bzl  system_rdl_toolchain.bzl  verilog_system_rdl_library.bzl  vhdl_system_rdl_library.bzl
systemrdl/private/: BUILD.bazel  system_rdl.bzl
systemrdl/private/tests/output_name/: BUILD.bazel
systemrdl/private/tests/plugin/: BUILD.bazel  expected_dump.txt  peakrdl_dump.py  plugin_test.bzl
systemrdl/private/tests/renames/: BUILD.bazel  spi_renamed.sv.golden  spi_renamed_pkg.sv.golden
systemrdl/private/tests/simple/: BUILD.bazel
systemrdl/private/tests/verilog_lib/: verilog_system_rdl_library_test_suite.bzl
systemrdl/private/tests/vhdl_lib/: BUILD.bazel  vhdl_system_rdl_library_test_suite.bzl
systemrdl/toolchain/: BUILD.bazel
tools/bzl_version/: version_test.py
tools/diff/: BUILD.bazel  diff_test.bzl  diff_test.py
tools/peakrdl_wrapper/: BUILD.bazel  peakrdl_wrapper.py  peakrdl_wrapper_test.py
tools/requirements/: BUILD.bazel  requirements.in  requirements_linux_aarch64.txt  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
tools/toolchains/: BUILD.bazel
