load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@rules_rust_mdbook//:defs.bzl", "mdbook", "mdbook_server")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

stardoc(
    name = "system_rdl_defs",
    out = "src/system_rdl_defs.md",
    input = "//systemrdl:defs.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//systemrdl:defs_bzl"],
)

stardoc(
    name = "system_rdl_library_doc",
    out = "src/system_rdl_library.md",
    input = "//systemrdl:system_rdl_library.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//systemrdl:defs_bzl"],
)

stardoc(
    name = "system_rdl_toolchain_doc",
    out = "src/system_rdl_toolchain.md",
    input = "//systemrdl:system_rdl_toolchain.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//systemrdl:defs_bzl"],
)

stardoc(
    name = "verilog_system_rdl_library_doc",
    out = "src/verilog_system_rdl_library.md",
    input = "//systemrdl:verilog_system_rdl_library.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//systemrdl:defs_bzl"],
)

stardoc(
    name = "system_rdl_info_doc",
    out = "src/system_rdl_info.md",
    input = "//systemrdl:system_rdl_info.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//systemrdl:defs_bzl"],
)

mdbook(
    name = "book",
    srcs = glob(["src/**/*.md"]) + [
        ":system_rdl_defs",
        ":system_rdl_info_doc",
        ":system_rdl_library_doc",
        ":system_rdl_toolchain_doc",
        ":verilog_system_rdl_library_doc",
    ],
    book = "book.toml",
    # Windows builds are typically super slow in CI so they're avoided.
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

alias(
    name = "docs",
    actual = ":book",
    tags = ["manual"],
)

mdbook_server(
    name = "server",
    book = ":book",
    tags = ["manual"],
)

sh_binary(
    name = "publish_book",
    srcs = ["publish_book.sh"],
    data = [":book"],
    env = {"BOOK_DIR": "$(rootpath :book)"},
    tags = ["manual"],
)
