"""rules_systemrdl examples"""

module(
    name = "rules_systemrdl_examples",
    version = "0.0.0",
)

bazel_dep(name = "rules_systemrdl", version = "0.0.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_venv", version = "0.12.0")
bazel_dep(name = "rules_verilog", version = "1.1.1")
bazel_dep(name = "rules_vhdl", version = "0.1.1")
bazel_dep(name = "rules_req_compile", version = "1.1.0")

local_path_override(
    module_name = "rules_systemrdl",
    path = "..",
)

register_toolchains(
    "//toolchain",
)

python = use_extension("@rules_venv//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.11",
)
use_repo(
    python,
    "python_3_11_aarch64-apple-darwin",
    "python_3_11_aarch64-unknown-linux-gnu",
    "python_3_11_x86_64-apple-darwin",
    "python_3_11_x86_64-pc-windows-msvc",
    "python_3_11_x86_64-unknown-linux-gnu",
    python311 = "python_3_11",
)

requirements = use_extension("@rules_req_compile//extensions:python.bzl", "requirements")
requirements.parse(
    name = "pip_deps",
    requirements_locks = {
        "//requirements:requirements_linux_aarch64.txt": "//requirements:linux_aarch64",
        "//requirements:requirements_linux_x86_64.txt": "//requirements:linux_x86_64",
        "//requirements:requirements_macos_aarch64.txt": "//requirements:macos_aarch64",
        "//requirements:requirements_windows_x86_64.txt": "//requirements:windows_x86_64",
    },
)
use_repo(requirements, "pip_deps")
