load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":system_rdl.bzl", "system_rdl_peakrdl_toolchain_alias")

system_rdl_peakrdl_toolchain_alias(
    name = "current_system_rdl_peakrdl_toolchain",
    visibility = ["//tools/peakrdl_wrapper:__pkg__"],
)

alias(
    name = "peakrdl",
    actual = "//tools/peakrdl_wrapper:peakrdl_wrapper",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//systemrdl:__pkg__"],
    deps = [
        "@rules_venv//python:defs_bzl",
    ],
)
