load("@rules_venv//python:py_library.bzl", "py_library")
load("//systemrdl:system_rdl_output.bzl", "system_rdl_output")
load("//systemrdl:system_rdl_toolchain.bzl", "system_rdl_toolchain")
load("//tools/diff:diff_test.bzl", "diff_test")
load(":plugin_test.bzl", "with_extra_toolchain")

py_library(
    name = "peakrdl_dump",
    srcs = ["peakrdl_dump.py"],
    imports = ["."],
    deps = [
        "@pip_deps//peakrdl",
    ],
)

py_library(
    name = "peakrdl",
    deps = [
        ":peakrdl_dump",
        "@pip_deps//peakrdl",
    ],
)

system_rdl_toolchain(
    name = "system_rdl_toolchain",
    exporter_dirs = {
        "html": "_html",
    },
    exporter_files = {
        "regblock": ".sv,_pkg.sv",
        "reglist": ".txt",
    },
    peakrdl = ":peakrdl",
    peakrdl_config = "peakrdl.toml",
)

toolchain(
    name = "toolchain",
    toolchain = ":system_rdl_toolchain",
    toolchain_type = "//systemrdl:toolchain_type",
)

with_extra_toolchain(
    name = "atxmega_spi_with_plugin",
    extra_toolchain = "//systemrdl/private/tests/plugin:toolchain",
    target = "//systemrdl/private/tests/simple:atxmega_spi",
)

filegroup(
    name = "atxmega_spi_reglist_filegroup",
    srcs = [":atxmega_spi_with_plugin"],
    output_group = "system_rdl_reglist",
)

diff_test(
    name = "reglist_filegroup_output_test",
    file1 = ":atxmega_spi_reglist_filegroup",
    file2 = "expected_dump.txt",
)

system_rdl_output(
    name = "atxmega_spi_reglist_out_exporter",
    exporter = "reglist",
    lib = ":atxmega_spi_with_plugin",
)

diff_test(
    name = "reglist_exporter_output_test",
    file1 = ":atxmega_spi_reglist_out_exporter",
    file2 = "expected_dump.txt",
)

system_rdl_output(
    name = "atxmega_spi_reglist_out_output_group",
    lib = ":atxmega_spi_with_plugin",
    output_group = "system_rdl_reglist",
)

diff_test(
    name = "reglist_output_group_output_test",
    file1 = ":atxmega_spi_reglist_out_output_group",
    file2 = "expected_dump.txt",
)
